hphp/hack/test/typecheck/const_interface.php.exp
File "const_interface.php", line 18, characters 12-15:
Invalid return type (Typing[4110])
File "const_interface.php", line 17, characters 26-31:
Expected string
File "const_interface.php", line 13, characters 9-11:
But got int
